# advent-of-code-2023

./: .gitignore  README.md  nohup.out
aoc/: aoc.opam  dune-project
aoc/lib/: parsing  parsing.cmi  parsing.ml
aoc/lib/runner/: runner.ml
aoc/lib/util/: dune  helpers.ml
aoc/lib/year2022/: day01.ml  day02.ml  day03.ml  day04.ml  dune
aoc/test/year2022/: day02_test.ml  dune
lib/runner/: dune  runner.ml
lib/util/: helpers.ml  parser.ml
lib/year2022/: day03.ml  day04.ml  day05.ml  dune
lib/year2023/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  dune  template.ml
notes/: day11.txt  day12.txt
test/year2022/: day01_test.ml  day03_test.ml  day04_test.ml  day05_test.ml
test/year2023/: day01_test.ml  day02_test.ml  day03_test.ml  day04_test.ml  day05_test.ml  day06_test.ml  day07_test.ml  day08_test.ml  day09_test.ml  day10_test.ml  day11_test.ml  day12_test.ml  dune
