(lang dune 3.11)

(name aoc)

(generate_opam_files true)

(source
 (github acrucetta/advent-of-code-2023))

(authors "Andres Crucetta")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
